<LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:orientation="vertical"
      android:layout_width="match_parent" 
      android:layout_height="match_parent" 
      android:background="@android:color/black">
  <TextView 
      android:layout_width="match_parent" 
      android:layout_height="wrap_content" 
      android:id="@+id/TextViewTopTitle"
       android:text="@string/app_logo_top" 
       android:textColor="@color/logo_color" 
       android:layout_gravity="center_vertical|center_horizontal" 
       android:gravity="top|center" 
       android:textSize="@dimen/logo_size" /> 
 <TableLayout
      android:id="@+id/TableLayout01" 
     android:stretchColumns="*" 
     android:layout_height="wrap_content" 
     android:layout_width="match_parent">
 <TableRow 
     android:id="@+id/TableRow01" 
     android:layout_height="wrap_content" 
     android:layout_width="wrap_content" 
     android:layout_gravity="center_vertical|center_horizontal">

     <ImageView
         android:id="@+id/ImageView1"
         android:layout_width="110dip"
         android:layout_height="110dip"
         android:layout_gravity="left|fill"
         android:contentDescription="@string/desc1"
         android:src="@drawable/location" />
 
  </TableRow>
 <TableRow 
     android:id="@+id/TableRow02" 
     android:layout_height="wrap_content" 
     android:layout_width="wrap_content" 
     android:layout_gravity="center_vertical|center_horizontal">
  <ImageView 
      android:id="@+id/ImageView2"
       android:layout_width="110dip" 
       android:layout_height="110dip" 
       android:layout_gravity="center_vertical|center_horizontal"
        android:src="@drawable/fakos"
        android:contentDescription="@string/desc2" /> 
  
  </TableRow>
  </TableLayout>
  <TextView
       android:layout_width="40dip"
        android:layout_height="40dip" 
        android:id="@+id/TextViewBottomTitle" 
        android:text="@string/app_logo_bottom"
         android:textColor="@color/logo_color" 
         android:gravity="center" 
         android:textSize="@dimen/logo_size" />

  
  <Button android:id="@+id/btnNextScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" 
            android:layout_marginTop="10dip"/>
  
  <TextView
      android:id="@+id/TextViewBottomVersion"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:background="@color/version_bkgrd"
      android:gravity="center"
      android:lineSpacingExtra="@dimen/version_spacing"
      android:text="@string/app_version_info"
      android:textColor="@color/version_color"
      android:textSize="@dimen/version_size" />
 
  </LinearLayout>