<LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:orientation="vertical" 
     android:layout_width="match_parent" 
     android:layout_height="match_parent" 
     android:background="@drawable/roadt">
 <RelativeLayout 
     android:id="@+id/RelativeLayout01" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
  <ImageView 
      xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/ImageView_MenuHeader" 
       android:layout_width="50dip" 
       android:layout_height="50dip" 
       android:src="@drawable/location" 
       android:layout_alignParentLeft="true" 
       android:layout_alignParentTop="true"
       android:contentDescription="@string/desc3" /> 
  <TextView 
      android:id="@+id/TextView01" 
      android:layout_height="wrap_content" 
      android:text="@string/login" 
      android:textSize="@dimen/menu_size" 
      android:shadowDx="0" 
      android:shadowDy="0" 
      android:shadowRadius="10" 
      android:layout_width="wrap_content" 
      android:layout_gravity="fill_horizontal|center" 
      android:layout_alignParentTop="true" 
      android:layout_centerHorizontal="true" 
     
      android:textColor="@color/login_color" /> 
  <ImageView 
      xmlns:android="http://schemas.android.com/apk/res/android" 
      android:id="@+id/ImageView_MenuHeader2" 
      android:layout_height="50dip"
       android:layout_width="50dip"
      android:src="@drawable/fakos" 
      android:layout_gravity="right|center_vertical" 
    
      android:layout_alignParentRight="true" 
      android:layout_alignParentTop="true" 
      android:contentDescription="@string/desc4"/> 
  </RelativeLayout>
 <ScrollView 
     android:id="@+id/ScrollView01" 
     android:layout_width="match_parent" 
     android:layout_height="match_parent" 
     android:isScrollContainer="true" 
     android:scrollbars="vertical" 
     android:scrollbarAlwaysDrawVerticalTrack="true">
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content">
  <TextView android:id="@+id/TextView_Nickname" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_nickname" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:textColor="@color/login_color" /> 
  <EditText 
      android:id="@+id/EditText_Nickname" 
      android:layout_height="wrap_content" 
      android:maxLength="20" 
      android:layout_width="match_parent" 
      android:maxLines="1" 
      android:inputType="textPersonName" /> 
  <TextView 
      android:id="@+id/TextView_Email" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_email" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:textColor="@color/login_color" /> 
  <EditText 
      android:id="@+id/EditText_Email" 
      android:layout_height="wrap_content" 
      android:layout_width="match_parent" 
      android:maxLines="1" android:inputType="textEmailAddress" /> 
  <TextView 
      android:id="@+id/TextView_Password" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_password" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:textColor="@color/login_color" /> 
 <LinearLayout 
     android:id="@+id/LinearLayoutPassword" 
     android:orientation="horizontal" 
     android:layout_height="wrap_content" 
     android:layout_width="match_parent">
  <Button 
      android:id="@+id/Button_Password" 
      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:text="@string/settings_button_pwd"
         android:onClick="onSetPasswordButtonClick" /> 
  <TextView 
      android:id="@+id/TextView_Password_Info" 
      android:layout_width="match_parent" 
      android:layout_height="match_parent" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" android:gravity="center" 
      android:textColor="@color/login_color" /> 
  </LinearLayout>
  <TextView 
      android:id="@+id/TextView_DOB" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_dob" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:textColor="@color/login_color" /> 
 <LinearLayout 
     android:id="@+id/LinearLayout01" 
     android:orientation="horizontal" 
     android:layout_height="wrap_content" 
     android:layout_width="match_parent">
  <Button 
      android:id="@+id/Button_DOB" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_button_dob" 
      android:onClick="onPickDateButtonClick" /> 
  <TextView 
      android:layout_width="match_parent" 
      android:layout_height="match_parent" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:gravity="center" 
      android:id="@+id/TextView_DOB_Info" /> 
  </LinearLayout>
  <TextView 
      android:id="@+id/TextView_Gender" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/settings_gender" 
      android:textSize="@dimen/help_text_size" 
      android:textStyle="bold" 
      android:textColor="@color/login_color" /> 
  <Spinner 
      android:id="@+id/Spinner_Gender" 
      android:layout_height="wrap_content"
       android:layout_width="match_parent" 
       android:entries="@array/genders" /> 
   <Button android:id="@+id/btnNextScreen2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next2" 
            android:layout_marginTop="10dip"/>
  </LinearLayout>
  </ScrollView>
  
  </LinearLayout>